[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.futures]
version = "0.3.19"
default-features = false
features = ["thread-pool"]

[[bin]]
name= "webserver"
path="webserver.rs"